feat(event): Add event endpoint
